--- a/package.json
+++ b/package.json
@@ -99,6 +99,9 @@
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
   },
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
