--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "workbox-webpack-plugin": "3.6.3"
   },
   "engines": {
-    "node": "12.x"
+    "node": "10.19.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
