--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_HOSTNAME=http://bestonlinemenus.loc
-REACT_APP_APINAME=http://back.bestonlinemenus.loc
+REACT_APP_HOSTNAME=https://bestonlinemenus.herokuapp.com/
+REACT_APP_APINAME=http://back.bestonlinemenus.dev.etcetera.kiev.ua/
