--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_HOSTNAME=https://bestonlinemenus.herokuapp.com/
-REACT_APP_APINAME=http://back.bestonlinemenus.dev.etcetera.kiev.ua/
+REACT_APP_APINAME=https://back.bestonlinemenus.dev.etcetera.kiev.ua/
