--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_HOSTNAME=https://bestonlinemenus.herokuapp.com/
 REACT_APP_APINAME=https://back.bestonlinemenus.dev.etcetera.kiev.ua/
+NODE_ENV=production
